@@ -335,8 +335,8 @@ public class TestMapVector {
 
       /* check the vector output */
       int index = 0;
-      int offset = 0;
-      Map<?, ?> result = null;
+      int offset;
+      Map<?, ?> result;
 
       /* index 0 */
       assertFalse(mapVector.isNull(index));
@@ -571,18 +571,18 @@ public class TestMapVector {
       assertEquals(1L, getResultKey(resultStruct));
       ArrayList<Long> list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(3, list.size()); // value is a list with 3 elements
-      assertEquals(new Long(50), list.get(0));
-      assertEquals(new Long(100), list.get(1));
-      assertEquals(new Long(200), list.get(2));
+      assertEquals(Long.valueOf(50), list.get(0));
+      assertEquals(Long.valueOf(100), list.get(1));
+      assertEquals(Long.valueOf(200), list.get(2));
 
       // Second Map entry
       resultStruct = (Map<?, ?>) resultSet.get(1);
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(4, list.size()); // value is a list with 4 elements
-      assertEquals(new Long(75), list.get(0));
-      assertEquals(new Long(125), list.get(1));
-      assertEquals(new Long(150), list.get(2));
-      assertEquals(new Long(175), list.get(3));
+      assertEquals(Long.valueOf(75), list.get(0));
+      assertEquals(Long.valueOf(125), list.get(1));
+      assertEquals(Long.valueOf(150), list.get(2));
+      assertEquals(Long.valueOf(175), list.get(3));
 
       // Get mapVector element at index 1
       result = mapVector.getObject(1);
@@ -593,24 +593,24 @@ public class TestMapVector {
       assertEquals(3L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(1, list.size()); // value is a list with 1 element
-      assertEquals(new Long(10), list.get(0));
+      assertEquals(Long.valueOf(10), list.get(0));
 
       // Second Map entry
       resultStruct = (Map<?, ?>) resultSet.get(1);
       assertEquals(4L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(2, list.size()); // value is a list with 1 element
-      assertEquals(new Long(15), list.get(0));
-      assertEquals(new Long(20), list.get(1));
+      assertEquals(Long.valueOf(15), list.get(0));
+      assertEquals(Long.valueOf(20), list.get(1));
 
       // Third Map entry
       resultStruct = (Map<?, ?>) resultSet.get(2);
       assertEquals(5L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(3, list.size()); // value is a list with 1 element
-      assertEquals(new Long(25), list.get(0));
-      assertEquals(new Long(30), list.get(1));
-      assertEquals(new Long(35), list.get(2));
+      assertEquals(Long.valueOf(25), list.get(0));
+      assertEquals(Long.valueOf(30), list.get(1));
+      assertEquals(Long.valueOf(35), list.get(2));
 
       /* check underlying bitVector */
       assertFalse(mapVector.isNull(0));
@@ -1012,8 +1012,8 @@ public class TestMapVector {
       final ArrowBuf offsetBuffer = mapVector.getOffsetBuffer();
 
       /* mapVector has 2 entries at index 0 and 4 entries at index 1 */
-      assertEquals(0, offsetBuffer.getInt(0 * MapVector.OFFSET_WIDTH));
-      assertEquals(2, offsetBuffer.getInt(1 * MapVector.OFFSET_WIDTH));
+      assertEquals(0, offsetBuffer.getInt(0));
+      assertEquals(2, offsetBuffer.getInt(MapVector.OFFSET_WIDTH));
       assertEquals(6, offsetBuffer.getInt(2 * MapVector.OFFSET_WIDTH));
     }
   }
@@ -1131,6 +1131,51 @@ public class TestMapVector {
       ValueVector vector = tp.getTo();
       assertSame(vector.getClass(), mapVector.getClass());
       vector.clear();
+    }
+  }
+
+  @Test
+  public void testGetTransferPairWithField() {
+    try (MapVector mapVector = MapVector.empty("mapVector", allocator, false)) {
+
+      FieldType type = new FieldType(false, ArrowType.Struct.INSTANCE, null, null);
+      AddOrGetResult<StructVector> addResult = mapVector.addOrGetVector(type);
+      FieldType keyType = new FieldType(false, MinorType.BIGINT.getType(), null, null);
+      FieldType valueType = FieldType.nullable(MinorType.FLOAT8.getType());
+      addResult.getVector().addOrGet(MapVector.KEY_NAME, keyType, BigIntVector.class);
+      addResult.getVector().addOrGet(MapVector.VALUE_NAME, valueType, Float8Vector.class);
+      mapVector.allocateNew();
+      mapVector.setValueCount(0);
+
+      assertEquals(-1, mapVector.getLastSet());
+      TransferPair tp = mapVector.getTransferPair(mapVector.getField(), allocator);
+      tp.transfer();
+      MapVector toVector = (MapVector) tp.getTo();
+      assertSame(toVector.getField(), mapVector.getField());
+      toVector.clear();
+    }
+  }
+
+  @Test
+  public void testGetTransferPairWithFieldAndCallBack() {
+    SchemaChangeCallBack callBack = new SchemaChangeCallBack();
+    try (MapVector mapVector = MapVector.empty("mapVector", allocator, false)) {
+
+      FieldType type = new FieldType(false, ArrowType.Struct.INSTANCE, null, null);
+      AddOrGetResult<StructVector> addResult = mapVector.addOrGetVector(type);
+      FieldType keyType = new FieldType(false, MinorType.BIGINT.getType(), null, null);
+      FieldType valueType = FieldType.nullable(MinorType.FLOAT8.getType());
+      addResult.getVector().addOrGet(MapVector.KEY_NAME, keyType, BigIntVector.class);
+      addResult.getVector().addOrGet(MapVector.VALUE_NAME, valueType, Float8Vector.class);
+      mapVector.allocateNew();
+      mapVector.setValueCount(0);
+
+      assertEquals(-1, mapVector.getLastSet());
+      TransferPair tp = mapVector.getTransferPair(mapVector.getField(), allocator, callBack);
+      tp.transfer();
+      MapVector toVector = (MapVector) tp.getTo();
+      assertSame(toVector.getField(), mapVector.getField());
+      toVector.clear();
     }
   }
 }
